--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-  <h1>Hi</h1>
-  <div id="example"></div>
+  <div id="main"></div>
 </body>
 
 <script src="./node_modules/react/umd/react.development.js"></script>
